--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.container-media-controll {
+.container-media-control {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,6 +8,6 @@
   align-items: center;
   justify-content: center;
 }
-#text {
+.lyrics {
   display: none;
 }
