--- a/css/styles.css
+++ b/css/styles.css
@@ -5,21 +5,17 @@ body {
   font-family: "Poppins", sans-serif;
   text-align: center;
   overflow: hidden;
+  margin: 0;
 }
 
 .home-container {
   display: block;
-  margin: 40vh auto;
-}
-
-button {
-  cursor: pointer;
-  padding: 0.3rem 1rem;
 }
 
 ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 a {
@@ -27,34 +23,50 @@ a {
 }
 
 .lyrics p {
-  font-size: large;
+  font-size: larger;
   opacity: 0.5;
   cursor: pointer;
+}
+
+.lyrics p:hover {
+  opacity: 1;
 }
 
 .lyrics p.active {
   opacity: 1;
 }
 
-.container-media-control {
-  display: block;
+.media-control {
+  display: grid;
+  align-items: end;
 }
 
 .grid {
   display: grid;
   height: 80vh;
-  grid-template-rows: 1fr 1fr;
+  margin-left: 5rem;
+  margin-right: 5rem;
 }
 
-.container-lyrics {
-  display: block;
+#overflow {
+  height: 40vh;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
-.container-adlibs {
-  display: block;
-}
+@media screen and (min-width: 320px) {
+  .grid {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
 
-.adlibs {
-  display: none;
-  color: gray;
+  .lyrics p {
+    font-size: large;
+  }
+
+  #overflow {
+    height: 50vh;
+  }
 }
