--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,19 @@
-/* todo */
+/* google font Poppins */
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 body {
   font-family: "Poppins", sans-serif;
-  text-align: center;
-  overflow: hidden;
+  background-color: #1a1a1a;
+  color: white;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
-.home-container {
-  display: block;
+h3 {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding: 1.5rem 0 1.5rem 0;
+  text-align: center;
 }
 
 ul {
@@ -18,55 +22,176 @@ ul {
   margin: 0;
 }
 
+li {
+  margin: 1rem 0 1rem 0;
+}
+
 a {
   text-decoration: none;
+  color: white;
 }
 
-.lyrics p {
-  font-size: larger;
-  opacity: 0.5;
+a:hover {
+  text-decoration: underline;
+}
+
+img {
+  width: 6rem;
+  border-radius: 4px;
+  border: white 2px solid;
+}
+
+small {
+  color: #888888;
+}
+
+button {
+  border-radius: 8px;
+  padding: 0.3rem 0.5rem;
   cursor: pointer;
+  font-weight: 700;
+  color: white;
+  background-color: #00000075;
+  border: none;
+  margin: 0 0 0 1rem;
 }
 
-.lyrics p:hover {
-  opacity: 1;
+button:hover {
+  background-color: #2b2b2b;
 }
 
-.lyrics p.active {
-  opacity: 1;
-}
-
-.media-control {
-  display: grid;
-  align-items: end;
+.home-container {
+  display: block;
+  text-align: center;
+  padding: 1rem;
 }
 
 .grid {
   display: grid;
-  height: 80vh;
-  margin-left: 5rem;
-  margin-right: 5rem;
+}
+
+.lyrics p {
+  opacity: 0.8;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 900;
+  color: black;
+}
+
+.lyrics p:hover {
+  opacity: 0.8;
+  color: white;
+}
+
+.lyrics p.active {
+  opacity: 1;
+  color: white;
+}
+
+.small-link {
+  text-decoration: none;
+  color: #888888;
 }
 
 #overflow {
   height: 40vh;
-  overflow-y: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
   scroll-behavior: smooth;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
+  margin: 0 0 1rem 0;
+  text-align: left;
+  padding: 0 1rem 2rem 1rem;
+  border-radius: 8px;
+}
+
+.media {
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  display: flex;
+  border-radius: 8px;
+  gap: 1rem;
+  align-items: center;
+  background-color: #00000075;
+}
+
+.footer {
+  align-items: end;
+  text-align: center;
+  margin: 1rem 0 1rem 0;
 }
 
 @media screen and (min-width: 320px) {
   .grid {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+    margin: 0 0.5rem 0 0.5rem;
+  }
+
+  .lyrics p {
+    font-size: medium;
+  }
+
+  .media {
+    margin: 0.5rem 0 0.5rem 0;
+  }
+
+  #overflow {
+    margin: 0 0 1rem 0;
+  }
+
+  button {
+    padding: 0.3rem 0.5rem;
+    margin: 0 0 0 0.3rem;
+    font-size: small;
+  }
+
+  .card {
+    padding: 1rem;
+  }
+}
+
+@media screen and (min-width: 620px) {
+  .grid {
+    margin: 0 8rem 0 8rem;
   }
 
   .lyrics p {
     font-size: large;
   }
 
-  #overflow {
-    height: 50vh;
+  .media {
+    margin: 1rem 0 1rem 0;
   }
+}
+
+@media screen and (min-width: 1220px) {
+  .grid {
+    margin: 0 20rem 0 20rem;
+  }
+
+  .lyrics p {
+    font-size: larger;
+  }
+
+}
+
+/* custom scrollbar from https://www.w3schools.com/ */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 0 8px 8px 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 0 8px 8px 0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  border-radius: 0 8px 8px 0;
 }
