--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,6 @@ body {
   background-color: #1a1a1a;
   color: white;
   margin: 0;
-  scroll-behavior: smooth;
-}
-
-h3 {
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding: 1.5rem 0 1.5rem 0;
-  text-align: center;
 }
 
 ul {
@@ -23,7 +15,13 @@ ul {
 }
 
 li {
-  margin: 1rem 0 1rem 0;
+  margin: 0;
+  font-size: medium;
+  font-weight: 600;
+}
+
+li small {
+  font-size: small;
 }
 
 a {
@@ -31,47 +29,39 @@ a {
   color: white;
 }
 
-a:hover {
-  text-decoration: underline;
-}
-
 img {
   width: 6rem;
   border-radius: 4px;
-  border: white 2px solid;
 }
 
 small {
-  color: #888888;
+  color: lightslategray;
 }
 
 button {
+  display: none;
   border-radius: 8px;
   padding: 0.3rem 0.5rem;
   cursor: pointer;
-  font-weight: 700;
+  font-weight: 600;
   color: white;
-  background-color: #00000075;
+  background-color: black;
   border: none;
-  margin: 0 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
 button:hover {
-  background-color: #2b2b2b;
+  background-color: lightslategray;
 }
 
 .home-container {
   display: block;
   text-align: center;
-  padding: 1rem;
-}
-
-.grid {
-  display: grid;
+  margin: 1rem;
 }
 
 .lyrics p {
-  opacity: 0.8;
+  opacity: 1;
   cursor: pointer;
   font-weight: 600;
   font-size: 900;
@@ -79,7 +69,7 @@ button:hover {
 }
 
 .lyrics p:hover {
-  opacity: 0.8;
+  opacity: 1;
   color: white;
 }
 
@@ -88,9 +78,14 @@ button:hover {
   color: white;
 }
 
-.small-link {
-  text-decoration: none;
-  color: #888888;
+.header {
+  text-align: center;
+  align-items: center;
+}
+
+.card:hover {
+  border: white solid 1px;
+  transition: 100ms;
 }
 
 #overflow {
@@ -109,18 +104,9 @@ button:hover {
   justify-content: center;
 }
 
-.card {
-  display: flex;
-  border-radius: 8px;
-  gap: 1rem;
-  align-items: center;
-  background-color: #00000075;
-}
-
 .footer {
-  align-items: end;
+  padding: 1rem 0 2rem 0;
   text-align: center;
-  margin: 1rem 0 1rem 0;
 }
 
 @media screen and (min-width: 320px) {
@@ -132,22 +118,32 @@ button:hover {
     font-size: medium;
   }
 
-  .media {
-    margin: 0.5rem 0 0.5rem 0;
-  }
-
   #overflow {
     margin: 0 0 1rem 0;
   }
 
-  button {
-    padding: 0.3rem 0.5rem;
-    margin: 0 0 0 0.3rem;
-    font-size: small;
+  .card {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    margin: 0 0 1rem 0;
+    border-radius: 8px;
+    border: lightslategray solid 1px;
+    background-color: black;
+    padding: 1.5rem;
+    flex-shrink: 0;
   }
 
-  .card {
-    padding: 1rem;
+  .row {
+    display: block;
+    float: inline-start;
+    height: 11rem;
+    overflow-y: auto;
+  }
+
+  .home-grid {
+    display: block;
+    padding: 0 1rem 0 1rem;
   }
 }
 
@@ -160,8 +156,15 @@ button:hover {
     font-size: large;
   }
 
-  .media {
-    margin: 1rem 0 1rem 0;
+  .row {
+    display: flex;
+    overflow-x: auto;
+    gap: 1rem;
+    height: 11rem;
+  }
+
+  .home-grid {
+    padding: 0 10rem 0 10rem;
   }
 }
 
@@ -174,24 +177,11 @@ button:hover {
     font-size: larger;
   }
 
-}
+  button {
+    display: initial;
+  }
 
-/* custom scrollbar from https://www.w3schools.com/ */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 0 8px 8px 0;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 0 8px 8px 0;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-  border-radius: 0 8px 8px 0;
+  .home-grid {
+    padding: 0 30rem 0 30rem;
+  }
 }
