--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,11 @@ button:hover {
   background-color: lightslategray;
 }
 
+hr {
+  margin: 1rem 0 1rem 0;
+  border-radius: 2px;
+}
+
 .home-container {
   display: block;
   text-align: center;
@@ -93,7 +98,6 @@ button:hover {
   overflow-y: scroll;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  margin: 0 0 1rem 0;
   text-align: left;
   padding: 0 1rem 2rem 1rem;
   border-radius: 8px;
@@ -109,6 +113,13 @@ button:hover {
   text-align: center;
 }
 
+.wrap {
+  padding: 0.5rem 0 0.5rem 0;
+  border-radius: 8px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
 @media screen and (min-width: 320px) {
   .grid {
     margin: 0 0.5rem 0 0.5rem;
@@ -116,10 +127,6 @@ button:hover {
 
   .lyrics p {
     font-size: medium;
-  }
-
-  #overflow {
-    margin: 0 0 1rem 0;
   }
 
   .card {
@@ -135,10 +142,10 @@ button:hover {
   }
 
   .row {
-    display: block;
-    float: inline-start;
+    display: flex;
+    overflow-x: auto;
+    gap: 1rem;
     height: 11rem;
-    overflow-y: auto;
   }
 
   .home-grid {
@@ -154,13 +161,6 @@ button:hover {
 
   .lyrics p {
     font-size: large;
-  }
-
-  .row {
-    display: flex;
-    overflow-x: auto;
-    gap: 1rem;
-    height: 11rem;
   }
 
   .home-grid {
@@ -184,4 +184,23 @@ button:hover {
   .home-grid {
     padding: 0 30rem 0 30rem;
   }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #f1f1f1;
+  background: #888;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
