--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 body {
   font-family: "Poppins", sans-serif;
   background-color: #1a1a1a;
-  color: white;
+  color: #f1f3f4;
   margin: 0;
 }
 
@@ -26,7 +26,7 @@ li small {
 
 a {
   text-decoration: none;
-  color: white;
+  color: #f1f3f4;
 }
 
 img {
@@ -44,14 +44,15 @@ button {
   padding: 0.3rem 0.5rem;
   cursor: pointer;
   font-weight: 600;
-  color: white;
+  color: #f1f3f4;
   background-color: black;
-  border: none;
+  border: solid 1px lightslategray;
   margin-bottom: 1rem;
 }
 
 button:hover {
-  background-color: lightslategray;
+  border: #f1f3f4 solid 1px;
+  transition: 100ms;
 }
 
 hr {
@@ -75,12 +76,13 @@ hr {
 
 .lyrics p:hover {
   opacity: 1;
-  color: white;
+  color: #f1f3f4;
+  transition: 100ms;
 }
 
 .lyrics p.active {
   opacity: 1;
-  color: white;
+  color: #f1f3f4;
 }
 
 .header {
@@ -89,7 +91,7 @@ hr {
 }
 
 .card:hover {
-  border: white solid 1px;
+  border: #f1f3f4 solid 1px;
   transition: 100ms;
 }
 
@@ -191,16 +193,16 @@ hr {
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #f1f3f4;
   border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #f1f1f1;
-  background: #888;
+  background: #f1f3f4;
+  background: slategray;
   border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: darkslategray;
 }
