--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,10 @@ hr {
   border-radius: 2px;
 }
 
+pre {
+  font-size: small;
+}
+
 .home-container {
   display: block;
   text-align: center;
@@ -108,6 +112,7 @@ hr {
 .media {
   display: flex;
   justify-content: center;
+  margin: 0 0 1rem 0;
 }
 
 .footer {
@@ -128,7 +133,7 @@ hr {
   }
 
   .lyrics p {
-    font-size: medium;
+    font-size: large;
   }
 
   .card {
@@ -162,7 +167,7 @@ hr {
   }
 
   .lyrics p {
-    font-size: large;
+    font-size: larger;
   }
 
   .home-grid {
@@ -173,10 +178,6 @@ hr {
 @media screen and (min-width: 1220px) {
   .grid {
     margin: 0 20rem 0 20rem;
-  }
-
-  .lyrics p {
-    font-size: larger;
   }
 
   button {
