--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,7 @@ pre {
   padding: 0.5rem 0 0.5rem 0;
   border-radius: 8px;
   text-align: center;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width: 320px) {
