--- a/css/styles.css
+++ b/css/styles.css
@@ -44,15 +44,10 @@ button {
   padding: 0.3rem 0.5rem;
   cursor: pointer;
   font-weight: 600;
-  color: #f1f3f4;
+  color: lightslategray;
   background-color: black;
   border: solid 1px lightslategray;
   margin-bottom: 1rem;
-}
-
-button:hover {
-  border: #f1f3f4 solid 1px;
-  transition: 100ms;
 }
 
 hr {
@@ -64,10 +59,16 @@ pre {
   font-size: small;
 }
 
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 0 2rem 0 2rem; */
+}
+
 .home-container {
   display: block;
   text-align: center;
-  margin: 1rem;
 }
 
 .lyrics p {
@@ -126,6 +127,7 @@ pre {
 @media screen and (min-width: 320px) {
   .grid {
     margin: 0 0.5rem 0 0.5rem;
+    padding: 0 0.5rem 0 0.5rem;
   }
 
   .lyrics p {
@@ -186,17 +188,17 @@ pre {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
+  height: 5px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f3f4;
+  background: #f4f1f100;
   border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #f1f3f4;
-  background: slategray;
+  background: lightslategray;
   border-radius: 8px;
 }
 
